# Agentic-AI-System

./: README.md  agents.py  meeting_notes.md
DocuQuery_agent/: .env  Readme.md  agent.py  knowledge_base.py  requirements.txt
DocuQuery_agent/db/: agents.db
DocuQuery_agent/reports/: Report.md
Enflux-Technical-Assessment/: utils.py
Enflux-Technical-Assessment/reports/: dt_classification_report.json
House-Inspection_agent/: .env  Final.eml  agents_setup.py  crew_setup.py  tasks_setup.py  tools_setup.py
Pdf_agent/: pyproject.toml
Pdf_agent/src/pdf_rag/: crew.py  (+2 more)
PodcastCreator_agent/: agents_setup.py  crew_setup.py  requirements.txt  tasks_setup.py  tools_setup.py  utils.py
YouTubeSponser_agent/: .env  agents_setup.py  crew.py  pydantic_object.py  tasks_setup.py
codebase_repo_agent/: .env  .gitignore  README.md  app.py  pyproject.toml
codebase_repo_agent/indexes/P8xCnJi9qcoYSQKH17tV0ipZi21hgwfj/index_storage/: default__vector_store.json  docstore.json  index_store.json
codebase_repo_agent/src/codebase_repo_agent/: crew.py  types_object.py  utils.py
codebase_repo_agent/src/codebase_repo_agent/config/: agents.yaml  tasks.yaml
codebase_repo_agent/src/codebase_repo_agent/tools/: custom_tool.py
database_agent/: README.md  pyproject.toml
database_agent/data/: salaries.db
database_agent/src/database_agent/: crew.py  main.py  query_analysis.md
database_agent/src/database_agent/config/: agents.yaml  tasks.yaml
database_agent/src/database_agent/tools/: custom_tool.py
database_agent/util/: create_db.py
meeting_notes_agent/: README.md  crew.py  tasks.py  tools.py
product_analyst_multimodal_agent/: README.md  agent.py  app.py  prompts.py  requirements.txt  utils.py
recommendation_engine_agent/: README.md  pyproject.toml
recommendation_engine_agent/sources/: netflix_data.xlsx  ~$netflix_data.xlsx
recommendation_engine_agent/src/agentic_rag_example/: crew.py  main.py  report.md
recommendation_engine_agent/src/agentic_rag_example/config/: agents.yaml  tasks.yaml
recommendation_engine_agent/src/agentic_rag_example/tools/: weaviate_vector_search_tool.py
recommendation_engine_agent/src/agentic_rag_example/utils/: pre-process-docs.py
(+31 files in other folders)
