[project]
name = "codebase_repo_agent"
version = "0.1.0"
description = "codebase_repo_agent using crewAI"
authors = [{ name = "Amit yadav", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.95.0,<1.0.0",
    "llama-index",
    "streamlit",
    "hashids"
]

[project.scripts]
codebase_repo_agent = "codebase_repo_agent.main:run"
run_crew = "codebase_repo_agent.main:run"
train = "codebase_repo_agent.main:train"
replay = "codebase_repo_agent.main:replay"
test = "codebase_repo_agent.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
